# NormaGraph

./: README.md  config.yaml  pyproject.toml
docs/: agent-architecture.md  openapi.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: PipelineDialog.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  graph-layouts.ts  graph-workbench.ts  translations.ts
frontend/src/pages/: ApiDocsPage.tsx  DocumentsPage.tsx  KnowledgeGraphPage.tsx  ReportPage.tsx  RetrievalPage.tsx
scripts/: compare_llm_output_modes.py  ensure_postgres_db.py  run_report_pipeline.py  run_standard_pipeline.py  serve_graph_viewer.py  test_ingestion_pipeline.py  test_standard_title_llm_classifier.py
src/: main.py  prompts.py
src/adapters/: llm_client.py  mineru_client.py
src/api/: routes.py
src/core/: config.py  logging.py
src/models/: schemas.py
src/repositories/: job_store.py  postgres_graph_store.py  standard_registry.py
src/services/: graph_materialization.py  ingestion_service.py  llm_extraction.py  normalization.py  report_comparison_agent.py  report_outline_planner.py  report_pipeline.py  standard_pipeline.py  standard_title_classification.py
tests/: test_report_pipeline.py  test_standard_pipeline_llm_titles.py  test_standard_pipeline_tables.py
viewer/: README.md  app.js  index.html  styles.css
webui/: index.html
webui/assets/: index-BO_ZfR4k.js  index-CfnEd21S.js  index-DBQLg7D-.css  index-DNxKie4C.css  index-VqQMa2jA.js  index-eQ3ZKEsF.css
(+5 files in other folders)
