[project]
name = "normagraph"
version = "0.1.0"
description = "Minimal MinerU ingestion gateway and project scaffold for dam safety knowledge-graph workflows."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.scripts]
kg-agent-hhu = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapters", "src/api", "src/core", "src/models", "src/repositories", "src/services"]
force-include = {"src/main.py" = "main.py"}
